--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,9 @@
-apply plugin: 'com.android.application'
+import com.google.gms.googleservices.GoogleServicesPlugin
 
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.gms.google-services'
+GoogleServicesPlugin.config.disableVersionCheck = true
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -21,8 +25,43 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation "com.android.support:design:28.0.0"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation 'com.google.maps.android:android-maps-utils:0.5+'
+    implementation 'com.eftimoff:android-pathview:1.0.8@aar'
+    implementation 'com.github.Yalantis:GuillotineMenu-Android:1.2'
+    implementation 'com.google.android.gms:play-services-auth:12.0.1'
+    implementation 'com.nightonke:boommenu:2.0.6'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.codemybrainsout.onboarding:onboarder:1.0.4'
+    implementation 'me.itangqi.waveloadingview:library:0.3.5'
+    implementation 'com.mxn.soul:flowingdrawer-core:2.0.0'
+    implementation 'com.nineoldandroids:library:2.4.0'
+//    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+//    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
+    implementation 'com.google.firebase:firebase-database:16.0.6'
+    implementation 'com.google.firebase:firebase-storage:10.0.0'
+    implementation 'com.google.firebase:firebase-messaging:17.0.0'
+    implementation 'com.google.firebase:firebase-database:16.0.6'
+    implementation 'com.github.florent37:materialviewpager:1.2.3'
+    implementation 'com.flaviofaria:kenburnsview:1.0.7'
+    implementation 'com.jpardogo.materialtabstrip:library:1.1.0'
+    implementation 'com.jakewharton:butterknife:8.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.1.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
+    implementation 'com.github.tbouron.shakedetector:library:1.0.0@aar'
+    implementation 'com.github.bumptech.glide:glide:4.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.wang.avi:library:2.1.3'
+    implementation 'org.parceler:parceler-api:1.1.6'
+    annotationProcessor 'org.parceler:parceler:1.1.6'
 }
