--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,17 +43,19 @@ dependencies {
     implementation 'com.mxn.soul:flowingdrawer-core:2.0.0'
     implementation 'com.nineoldandroids:library:2.4.0'
 //    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.yayandroid:LocationManager:2.0.0'
 //    implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
-    implementation 'com.google.firebase:firebase-auth:16.1.0'
-    implementation 'com.google.firebase:firebase-database:16.0.6'
-    implementation 'com.google.firebase:firebase-storage:10.0.0'
-    implementation 'com.google.firebase:firebase-messaging:17.0.0'
-    implementation 'com.google.firebase:firebase-database:16.0.6'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-database:17.0.0'
+    implementation 'com.google.firebase:firebase-storage:17.0.0'
+    implementation 'com.google.firebase:firebase-messaging:18.0.0'
+    implementation 'com.google.firebase:firebase-database:17.0.0'
     implementation 'com.github.florent37:materialviewpager:1.2.3'
     implementation 'com.flaviofaria:kenburnsview:1.0.7'
     implementation 'com.jpardogo.materialtabstrip:library:1.1.0'
     implementation 'com.jakewharton:butterknife:8.1.0'
+    compile 'com.google.android.gms:play-services-location:16.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.1.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
     implementation 'com.github.tbouron.shakedetector:library:1.0.0@aar'
