--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,14 +15,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LocationUtil.MyLocationUsingHelper">
+        <activity android:name=".RequestParts.RequestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BoardingActivity" />
+        <activity android:name=".LocationUtil.MyLocationUsingHelper" />
         <activity android:name=".MainActivity" />
         <activity android:name=".SplashActivity" />
         <activity android:name=".Auth.LoginActivity" />
@@ -35,7 +37,8 @@
         <activity android:name=".Auth.PasswordlessActivity" />
         <activity android:name=".Auth.GoogleSignInActivity" />
         <activity android:name=".DummyActivity" />
-        <activity android:name=".LocationUtil.CityByCoordinates"></activity>
+        <activity android:name=".LocationUtil.CityByCoordinates" />
+        <activity android:name=".BoardingActivity"></activity>
     </application>
 
 </manifest>
