--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,28 @@
 import com.google.gms.googleservices.GoogleServicesPlugin
 
+
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 //apply plugin: 'com.google.gms.google-services'
 GoogleServicesPlugin.config.disableVersionCheck = true
+
+buildscript {
+    repositories {
+        maven { url 'https://plugins.gradle.org/m2/' }
+    }
+    dependencies {
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.11.0, 0.99.99]'
+    }
+}
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+
+
 android {
     compileSdkVersion 28
     defaultConfig {
+        manifestPlaceholders = [onesignal_app_id               : '84b06347-06f3-46f4-9734-ace01303e6e3',
+                                // Project number pulled from dashboard, local value is ignored.
+                                onesignal_google_project_number: 'REMOTE']
         applicationId "com.example.android.teamtracker"
         minSdkVersion 21
         targetSdkVersion 28
@@ -15,6 +31,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -50,6 +67,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:17.0.0'
     implementation 'com.google.firebase:firebase-storage:17.0.0'
     implementation 'com.google.firebase:firebase-messaging:18.0.0'
+    compile 'pub.devrel:easypermissions:0.1.9'
+    implementation group: 'com.pubnub', name: 'pubnub-gson', version: '4.20.0'
+    implementation 'com.onesignal:OneSignal:[3.9.2, 3.99.99)'
+
+
     implementation 'com.google.firebase:firebase-database:17.0.0'
     implementation 'com.github.florent37:materialviewpager:1.2.3'
     implementation 'com.flaviofaria:kenburnsview:1.0.7'
