--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:17.0.0'
     implementation 'com.google.firebase:firebase-storage:17.0.0'
     implementation 'com.google.firebase:firebase-messaging:18.0.0'
-    compile 'pub.devrel:easypermissions:0.1.9'
+    implementation 'pub.devrel:easypermissions:0.1.9'
     implementation group: 'com.pubnub', name: 'pubnub-gson', version: '4.20.0'
     implementation 'com.onesignal:OneSignal:[3.9.2, 3.99.99)'
 
@@ -77,7 +77,7 @@ dependencies {
     implementation 'com.flaviofaria:kenburnsview:1.0.7'
     implementation 'com.jpardogo.materialtabstrip:library:1.1.0'
     implementation 'com.jakewharton:butterknife:8.1.0'
-    compile 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.1.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
     implementation 'com.github.tbouron.shakedetector:library:1.0.0@aar'
